# MonoTools

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  electron-builder.yml  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CORE_FEATURES.md  DATA_MODEL.md  DESIGN_SPEC.md  DESIGN_vercel.md  DEVELOPMENT_GUIDE.md  PLUGIN_SYSTEM.md  PROGRESS.md  REDESIGN.md  UI_DESIGN.md  http-api.md  provider-development-guide.md  重构设计文档_v1.0.0.md
memory/: MEMORY.md  monotools-initial-setup.md
resources/: preload.js  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/commands/: bus.rs  config.rs  mod.rs  parser.rs  plugin.rs  search.rs  system.rs  theme.rs  workspace.rs
src-tauri/src/config/: store.rs
src-tauri/src/models/: command.rs  file_entry.rs  mod.rs  plugin.rs  search.rs  workspace.rs
src-tauri/src/plugins/: api.rs  loader.rs  manager.rs  mod.rs  registry.rs  sandbox.rs
src-tauri/src/services/: app_scanner.rs  clipboard.rs  hot_reload.rs  hotkey.rs  mod.rs  tray.rs
src-tauri/src/services/file_indexer/: index_store.rs  indexer_service.rs  mod.rs  search_engine.rs  usn_journal.rs  watcher.rs
src-tauri/src/services/workspace/: mod.rs  process_enum.rs  restore.rs  snapshot.rs
src-tauri/src/utils/: mod.rs  path_utils.rs  pinyin.rs  windows_api.rs
(+159 files in other folders)
