[package]
name = "monotools"
version = "1.0.0"
description = "MonoTools - High-performance desktop launcher"
authors = ["MonoKelvin <monokelvin@example.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.0"
tauri-plugin-single-instance = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_System_Shutdown", "Win32_System_WindowsProgramming"] }
lru = "0.12"
blake3 = "1.5"
notify = "6.0"
rayon = "1.10"
async-trait = "0.1"
dirs = "5.0"
once_cell = "1.19"
hex = "0.4"
winreg = "0.55"
walkdir = "2.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
